CS_PROD_20150209_01/Metadata/unpackaged/objects/Broadcast_Item__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Broadcast_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Outside_Market_Fee_100_150__c</fullName>
        <formula>CASE(US_Markets__c,
&quot;GN: Greenville-New Bern-Washington. NC [101]&quot; , 75,
&quot;JA: Johnstown-Altoona. PA [102]&quot; , 75,
&quot;EV: Evansville. IN [104]&quot; , 75,
&quot;LH: Lincoln &amp; Hastings- Kearney. NE [105]&quot; , 75,
&quot;TT: Tallahassee. FL- Thomasville. GA [106]&quot; , 75,
&quot;TL: Tyler-Longview- Lufkin &amp; Nacogdoches. TX [107]&quot; , 75,
&quot;RE: Reno. NV [108]&quot; , 75,
&quot;FW: Ft Wayne. IN [109]&quot; , 75,
&quot;YT: Youngstown. OH [110]&quot; , 75,
&quot;AG: Augusta. GA [111]&quot; , 75,
&quot;BS: Boise. ID [112]&quot; , 75,
&quot;SM: Sioux Falls (Mitchell). SD [113]&quot; , 75,
&quot;HS: Springfield-Holyoke. MA [114]&quot; , 75,
&quot;LN: Lansing. MI [115]&quot; , 75,
&quot;PE: Peoria-Bloomington. IL [116]&quot; , 75,
&quot;FC: Fargo-Valley City. ND [117]&quot; , 75,
&quot;EU: Eugene. OR [121]&quot; , 75,
&quot;SB: Santa Barbara-Santa Maria-San Luis Obispo. CA [122]&quot; , 75,
&quot;YR: Yakima-Pasco-Richland-Kennewick. WA [123]&quot; , 75,
&quot;LF: Lafayette. LA [124]&quot; , 75,
&quot;MO: Monterey-Salinas. CA [125]&quot; , 75,
&quot;BK: Bakersfield. CA [126]&quot; , 75,
&quot;CB: Columbus. GA [127]&quot; , 75,
&quot;EC: La Crosse-Eau Claire. WI [128]&quot; , 75,
&quot;CC: Corpus Christi. TX [129]&quot; , 75,
&quot;AM: Amarillo. TX [130]&quot; , 75,
&quot;RC: Chico-Redding. CA [131]&quot; , 75,
&quot;WL: Wilmington. NC [132]&quot; , 75,
&quot;WR: Wausau-Rhinelander. WI [135]&quot; , 75,
&quot;TK: Topeka. KS [136]&quot; , 75,
&quot;CJ: Columbia-Jefferson City. MO [138]&quot; , 75,
&quot;DS: Duluth. MN-Superior. WI [139]&quot; , 75,
&quot;BT: Beaumont-Port Arthur. TX [141]&quot; , 75,
&quot;LB: Lubbock. TX [143]&quot; , 75,
&quot;SI: Salisbury. MD [144]&quot; , 75,
&quot;PS: Palm Springs. CA [145]&quot; , 75,
&quot;EE: Erie. PA [146]&quot; , 75,
&quot;SX: Sioux City. IA [147]&quot; , 75,
&quot;AA: Anchorage. AK [148]&quot; , 75,
&quot;AY: Albany. GA [150]&quot; , 75,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outside Market Fee 101 - 150</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outside_Market_Fee_150__c</fullName>
        <formula>CASE(US_Markets__c,
&quot;OD: Odessa-Midland. TX [151]&quot; , 100,
&quot;BM: Bismarck-Minot-Dickinson. ND [152]&quot; , 100,
&quot;RM: Rochester. MN-Mason City. IA-Austin. MN [153]&quot; , 100,
&quot;TH: Terre Haute. IN [154]&quot; , 100,
&quot;BB: Bluefield-Beckley-Oak Hill. WV [155]&quot; , 100,
&quot;BN: Bangor. ME [155]&quot; , 100,
&quot;BI: Binghamton. NY [157]&quot; , 100,
&quot;WG: Wheeling. WV-Steubenville. OH [158]&quot; , 100,
&quot;PC: Panama City. FL [159]&quot; , 100,
&quot;AS: Sherman. TX-Ada. OK [161]&quot; , 100,
&quot;BX: Biloxi-Gulfport. MS [162]&quot; , 100,
&quot;GV: Gainesville. FL [163]&quot; , 100,
&quot;AB: Abilene-Sweetwater. TX [164]&quot; , 100,
&quot;MU: Missoula. MT [165]&quot; , 100,
&quot;YE: Yuma. AZ-El Centro. CA [166]&quot; , 100,
&quot;BL: Billings. MT [168]&quot; , 100,
&quot;DN: Dothan. AL [169]&quot; , 100,
&quot;CK: Clarksburg-Weston. WV [170]&quot; , 100,
&quot;QH: Quincy. IL-Hannibal. MO-Keokuk. IA [171]&quot; , 100,
&quot;UT: Utica. NY [172]&quot; , 100,
&quot;RY: Rapid City. SD [173]&quot; , 100,
&quot;EL: Elmira. NY [174]&quot; , 100,
&quot;LC: Lake Charles. LA [175]&quot; , 100,
&quot;JS: Jackson. TN [176]&quot; , 100,
&quot;WN: Watertown. NY [177]&quot; , 100,
&quot;HB: Harrisonburg. VA [178]&quot; , 100,
&quot;AX: Alexandria. LA [179]&quot; , 100,
&quot;MQ: Marquette. MI [180]&quot; , 100,
&quot;JB: Jonesboro. AR [181]&quot; , 100,
&quot;BG: Bowling Green. KY [182]&quot; , 100,
&quot;CV: Charlottesville. VA [183]&quot; , 100,
&quot;LO: Laredo. TX [185]&quot; , 100,
&quot;MD: Meridian. MS [186]&quot; , 100,
&quot;GG: Greenwood-Greenville. MS [187]&quot; , 100,
&quot;BZ: Butte-Bozeman. MT [189]&quot; , 100,
&quot;GF: Great Falls. MT [190]&quot; , 100,
&quot;TF: Twin Falls. ID [191]&quot; , 100,
&quot;BE: Bend. OR [193]&quot; , 100,
&quot;UR: Eureka. CA [194]&quot; , 100,
&quot;CY: Cheyenne. WY-Scottsbluff. NE [195]&quot; , 100,
&quot;CR: Casper-Riverton. WY [196]&quot; , 100,
&quot;AO: San Angelo. TX [197]&quot; , 100,
&quot;OK: Ottumwa. IA-Kirksville. MO [199]&quot; , 100,
&quot;SJ: St Joseph. MO [200]&quot; , 100,
&quot;LI: Lima. OH [201]&quot; , 100,
&quot;FB: Fairbanks. AK [202]&quot; , 100,
&quot;ZA: Zainesville, OH [203]&quot; , 100,
&quot;VC: Victoria. TX [204]&quot; , 100,
&quot;HA: Helena. MT [206]&quot; , 100,
&quot;JU: Juneau. AK [207]&quot; , 100,
&quot;AP: Alpena. MI [208]&quot; , 100,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outside Market Fee 151 +</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outside_Market_Fee_26_50__c</fullName>
        <formula>CASE(US_Markets__c,
&quot;IN: Indianapolis. IN [26]&quot; , 25,
&quot;BA: Baltimore. MD [27]&quot; , 25,
&quot;SD: San Diego. CA [28]&quot; , 25,
&quot;NV: Nashville. TN [29]&quot; , 25,
&quot;HN: Hartford &amp; New Haven. CT [30]&quot; , 25,
&quot;KC: Kansas City. MO [31]&quot; , 25,
&quot;CS: Columbus. OH [32]&quot; , 25,
&quot;SC: Salt Lake City. UT [33]&quot; , 25,
&quot;MW: Milwaukee. WI [34]&quot; , 25,
&quot;CI: Cincinnati. OH [35]&quot; , 25,
&quot;SA: San Antonio. TX [36]&quot; , 25,
&quot;GA: Grnville-Spartanburg-Asheville-Anderson. SC [37]&quot; , 25,
&quot;WP: West Palm Beach-Ft. Pierce. FL [38]&quot; , 25,
&quot;BH: Birmingham-Anniston-Tuscaloosa. AL [39]&quot; , 25,
&quot;LV: Las Vegas. NV [40]&quot; , 25,
&quot;HL: Harrisburg-Lancaster-Lebanon- York. PA [41]&quot; , 25,
&quot;GR: Grand Rapids- Kalamazoo- Battle Creek. MI [42]&quot; , 25,
&quot;NN: Norfolk- Portsmouth- Newport News. VA [43]&quot; , 25,
&quot;OC: Oklahoma City. OK [44]&quot; , 25,
&quot;AQ: Albuquerque-Santa Fe. NM [45]&quot; , 25,
&quot;WS: Greensboro-High Point-Winston Salem. NC [46]&quot; , 25,
&quot;AU: Austin. TX [47]&quot; , 25,
&quot;LU: Louisville. KY [48]&quot; , 25,
&quot;MM: Memphis. TN [49]&quot; , 25,
&quot;JV: Jacksonville. FL [50]&quot; , 25,
0)  +

IF(ISPICKVAL( Radio_Markets__c, &quot;IN: Indianapolis. IN [26]&quot; ),
25,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outside Market Fee 26 - 50</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outside_Market_Fee_51_100__c</fullName>
        <formula>CASE( US_Markets__c, 
&quot;BF: Buffalo. NY [51]&quot; , 50, 
&quot;NO: New Orleans. LA [52]&quot; , 50, 
&quot;PV: Providence. RI-New Bedford. MA [53]&quot; , 50, 
&quot;WB: Wilkes Barre-Scranton. PA [54]&quot; , 50, 
&quot;FV: Fresno-Visalia. CA [55]&quot; , 50, 
&quot;LR: Little Rock-Pine Bluff. AR [56]&quot; , 50, 
&quot;RP: Richmond-Petersburg. VA [57]&quot; , 50, 
&quot;AL: Albany-Schenectady-Troy. NY [58]&quot; , 50, 
&quot;TU: Tulsa. OK [59]&quot; , 50, 
&quot;MP: Mobile. AL-Pensacola (Ft Walton Beach). FL [60]&quot; , 50, 
&quot;KX: Knoxville. TN [61]&quot; , 50, 
&quot;FM: Ft Myers-Naples. FL [62]&quot; , 50, 
&quot;DY: Dayton. OH [63]&quot; , 50, 
&quot;LX: Lexington. KY [64]&quot; , 50, 
&quot;CN: Charleston-Huntington. WV [65]&quot; , 50, 
&quot;RL: Roanoke-Lynchburg. VA [66]&quot; , 50, 
&quot;WH: Wichita-Hutchinson. KS Plus [67]&quot; , 50, 
&quot;FL: Flint-Saginaw-Bay City. MI [68]&quot; , 50, 
&quot;GB: Green Bay-Appleton. WI [69]&quot; , 50, 
&quot;TC: Tucson. AZ [70]&quot; , 50, 
&quot;HO: Honolulu. HI [71]&quot; , 50, 
&quot;DM: Des Moines-Ames. IA [72]&quot; , 50, 
&quot;SP: Spokane. WA [73]&quot; , 50, 
&quot;TO: Toledo. OH [74]&quot; , 50, 
&quot;SG: Springfield. MO [75]&quot; , 50, 
&quot;OM: Omaha. NE [76]&quot; , 50, 
&quot;CO: Columbia. SC [77]&quot; , 50, 
&quot;PA: Portland-Auburn. ME [78]&quot; , 50, 
&quot;RO: Rochester. NY [79]&quot; , 50, 
&quot;HD: Huntsville-Decatur (Florence). AL [80]&quot; , 50, 
&quot;HV: Paducah-Cape Girardeau-Harrisbrg Mt Vernon. [81]&quot; , 50, 
&quot;CD: Champaign &amp; Springfield-Decatur. IL [82]&quot; , 50, 
&quot;SH: Shreveport. LA [83]&quot; , 50, 
&quot;SY: Syracuse. NY [84]&quot; , 50, 
&quot;MA: Madison. WI [85]&quot; , 50, 
&quot;CG: Chattanooga. TN [86]&quot; , 50, 
&quot;BW: Harlingen-Weslaco-Brownsville- McAllen. TX [87]&quot; , 50, 
&quot;WT: Waco-Temple-Bryan. TX [88]&quot; , 50, 
&quot;CW: Cedar Rapids-Waterloo-Iowa City-Dubuque. IA [89]&quot; , 50, 
&quot;CP: Colorado Springs- Pueblo. CO [90]&quot; , 50, 
&quot;EP: El Paso. TX [91]&quot; , 50, 
&quot;SV: Savannah. GA [92]&quot; , 50, 
&quot;JK: Jackson. MS [93]&quot; , 50, 
&quot;BR: Baton Rouge. LA [94]&quot; , 50, 
&quot;BP: Burlington. VT- Plattsburgh. NY [95]&quot; , 50, 
&quot;TV: Tri-Cities. TN-VA [96]&quot; , 50, 
&quot;SE: South Bend-Elkhart. IN [97]&quot; , 50, 
&quot;CT: Charleston. SC [98]&quot; , 50, 
&quot;FS: Ft Smith-Fayetteville-Springdale- Rogers. AR [100]&quot; , 50, 
&quot;RI: Davenport. IA-Rock Island-Moline. IL [100]&quot; , 50, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outside Market Fee 51 - 100</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overage_Time_TRT__c</fullName>
        <formula>IF( (CEILING(( VALUE(LEFT(TRT__c, 2)) * 60 + VALUE( MID(TRT__c, 4, 2)) - 10   ) /10)) &lt; 0, 0, (CEILING(( VALUE(LEFT(TRT__c, 2)) * 60 + VALUE( MID(TRT__c, 4, 2)) - 10   ) /10)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overage Time TRT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPC_DVD_Clip__c</fullName>
        <formula>IF(

OR(

And ( ISPICKVAL( Inventory_Item__c , &quot;DVD - Video&quot;) ,  ISPICKVAL( Product_Detail__c , &quot;Standard (720x480)&quot;) ),

And ( ISPICKVAL( Inventory_Item__c , &quot;DVD - Data&quot;) ,  OR( ISPICKVAL( Product_Detail__c , &quot;Low Res (320x240)&quot;), ISPICKVAL( Product_Detail__c , &quot;High Res (720x480)&quot;) ) )

) , 

&quot;Yes&quot;, &quot;No&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field controls the PPC - DVD Clip rollup field on the Opportunity.</inlineHelpText>
        <label>PPC DVD Clip?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPC_HD__c</fullName>
        <formula>IF(

OR(

And ( ISPICKVAL( Inventory_Item__c , &quot;Digital Clip&quot;) ,  ISPICKVAL( Product_Detail__c , &quot;HD&quot;) ),

And ( ISPICKVAL( Inventory_Item__c , &quot;DigiCombo - Data&quot;) ,  ISPICKVAL( Product_Detail__c , &quot;HD&quot;) ),

And ( ISPICKVAL( Inventory_Item__c , &quot;DigiCombo - Video&quot;) ,  ISPICKVAL( Product_Detail__c , &quot;HD&quot;) ),

And ( ISPICKVAL( Inventory_Item__c , &quot;DVD - Video&quot;) ,  ISPICKVAL( Product_Detail__c , &quot;Blu-Ray (1280x720)&quot;) ) ) ,

&quot;Yes&quot;, &quot;No&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field controls the PPC - HD rollup field on the Opportunity.</inlineHelpText>
        <label>PPC HD?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Remaining_Percent__c</fullName>
        <formula>CP_Remaining__c  /  CP_of_Clip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Remaining Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Per_Hit_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Per Hit Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PinPoint_Notes__c</fullName>
        <label>PinPoint Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_Before_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Sum of Inventory Item and Product Detail</inlineHelpText>
        <label>Price Before Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>This field includes the Total Price Before Fees, Discount, Total Fees, and any Account Level Discount.</inlineHelpText>
        <label>Subtotal - old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <label>Product Detail</label>
        <picklist>
            <controllingField>Inventory_Item__c</controllingField>
            <picklistValues>
                <fullName>Standard (720x480)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blu-Ray (1280x720)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Res (320x240)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Res (720x480)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD (1280x720)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Quality (720x480)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Quality (320x240)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add&apos;l Digital Views: 1000/28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add&apos;l Digital Views: 500/28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add&apos;l Digital Views: 50/28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Translated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Grouping__c</fullName>
        <label>Product Grouping</label>
        <picklist>
            <picklistValues>
                <fullName>Highlight Reel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Clip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Clip</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Program_Title__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>Program Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <inlineHelpText>Add&apos;l Page Quantity</inlineHelpText>
        <label>Transcript Page Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROT__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>ROT</label>
        <picklist>
            <picklistValues>
                <fullName>Product Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled by AE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Radio_Markets__c</fullName>
        <description>Added by LM on 3/13/2013; From NetSuite</description>
        <label>Radio Markets</label>
        <picklist>
            <picklistValues>
                <fullName>AT: Atlanta. GA [9]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO: Boston. MA (Manchester. NH) [7]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH: Chicago. IL [3]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE: Detroit. MI [11]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF: Dallas-Ft Worth. TX [5]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU: Houston. TX [10]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN: Indianapolis. IN [26]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA: Los Angeles. CA [2]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY: New York. NY [1]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH: Philadelphia. PA [4]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF: San Francisco-Oakland-San Jose, CA [6]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL: St Louis. MO [21]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Radio_Stations__c</fullName>
        <description>Added by LM on 3/13/2013; From NetSuite</description>
        <label>Radio Stations</label>
        <picklist>
            <controllingField>Radio_Markets__c</controllingField>
            <picklistValues>
                <fullName>WSB (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBZ (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEEI (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRKO (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBBM (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGN (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLS (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMVP (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSCR (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBEZ (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCFS (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGCI (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WKQX (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLIT (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLUP (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WTMX (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WUSN (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WVAZ (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WZRD (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CKLW (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WJR (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WWJ (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WXYT (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCSX (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WDET (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WKQI (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WNIC (FM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBAP (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KLIF (AM Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRLD (AM Radio)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Tax Rate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Reason 1 : TV Station not Recorded [MR ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 2 : DNR/Questionable Quality [MR ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 3 : Past Archive [MR ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 4 : Radio Station not Recorded [MR ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 5 : Time Not Recorded [MR ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 6 : Higher Quality Needed [MR ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 7 : Translated Transcripts [MR ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 8 : Commercials / Audience Numbers [MR ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 9 : REDO [MR ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 10 : Special Record DNR [MR ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 11 : TV Station not Recorded [IQM ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 12 : DNR/Questionable Quality [IQM ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 13 : Past Archive [IQM ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 14 : Radio Station not Recorded [IQM ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 15 : Time Not Recorded [IQM ACQUIRED]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 16 : Higher Quality Needed [IQM ACQUIRED]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Redo_Clip_Package_Adj__c</fullName>
        <formula>IF(
 Opportunity__r.Redo_Item_s__c = True,
0 - ((( Total_Price_Before_Fees__c + Total_Fees__c  ) - IF(ISNULL(Discount__c), 0 , Discount__c ) ) * (1- Account_Level_Discount__c)),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redo/Clip Package Adj.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Redo_Item__c</fullName>
        <formula>IF( Opportunity__r.Redo_Item_s__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redo Item?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reel_Detail_Costs__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Reel&quot;), 
     IF(ISPICKVAL( Product_Detail__c , &quot;Compilation (320x240)&quot;),
     1000,
          IF(ISPICKVAL(Product_Detail__c , &quot;Highlight (720x480)&quot;),
          795,
          0
           )
     )
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reel Detail Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Ad_Hoc_Detail_Costs__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Report - Ad-Hoc&quot;), 
IF(ISPICKVAL( Product_Detail__c , &quot;TV&quot;), 
 Report_Custom_Pricing__c , 
IF(ISPICKVAL(Product_Detail__c , &quot;Radio&quot;), 
295, 
IF(ISPICKVAL(Product_Detail__c , &quot;UK&quot;), 
395, 
IF(ISPICKVAL(Product_Detail__c, &quot;Canada&quot;), 
395, 
0 
) 
)
) 
) 
,0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report - Ad-Hoc Detail Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Custom_Pricing__c</fullName>
        <label>Report Custom Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Detail_Costs__c</fullName>
        <formula>Report_Ad_Hoc_Detail_Costs__c + 
Report_Flat_Rate_Detail_Costs__c + 
Report_Per_Hit_Detail_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Detail Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Flat_Rate_Detail_Costs__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Report - Flat Rate&quot;), 
IF(ISPICKVAL( Product_Detail__c , &quot;TV&quot;), 
 Report_Custom_Pricing__c , 
IF(ISPICKVAL(Product_Detail__c , &quot;Radio&quot;), 
295, 
IF(ISPICKVAL(Product_Detail__c , &quot;UK&quot;), 
395, 
IF(ISPICKVAL(Product_Detail__c, &quot;Canada&quot;), 
395, 
0 
) 
)
) 
) 
,0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report - Flat Rate Detail Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Per_Hit_Detail_Costs__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Report - Per Hit&quot;), 
IF(ISPICKVAL( Product_Detail__c , &quot;TV&quot;), 
  Per_Hit_Rate__c *  Number_of_Hits__c , 
IF(ISPICKVAL(Product_Detail__c , &quot;Radio&quot;), 
Per_Hit_Rate__c *  Number_of_Hits__c , 
IF(ISPICKVAL(Product_Detail__c , &quot;UK&quot;), 
395, 
IF(ISPICKVAL(Product_Detail__c, &quot;Canada&quot;), 
395, 
0 
) 
)
) 
) 
,0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report - Per Hit Detail Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Route_To_Email_2__c</fullName>
        <formula>Opportunity__r.Route_To_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To Email 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_Email__c</fullName>
        <label>Route To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Route_To__c</fullName>
        <description>Added by LM on 2/22/2013; From NetSuite</description>
        <label>Route To</label>
        <picklist>
            <picklistValues>
                <fullName>Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**CH**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**NY**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Monkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Trans*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creat Svcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med Rel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WOP - SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_Time_Hour__c</fullName>
        <label>Routing Time - Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Time__c</fullName>
        <label>Routing Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Royalty_Fee__c</fullName>
        <formula>CASE( US_Stations__c , 
&quot;CLTV&quot;, 25, 
&quot;KOMO&quot;, 25,
&quot;KRON&quot;, 25,
&quot;WLS&quot;, 25,
0)

+

CASE( Cable_National_Stations__c ,
&quot;BLTV&quot;, 25,
&quot;CNBC&quot;, 25,
&quot;CNN&quot;, 25,
&quot;CNNE&quot;, 25,
&quot;HLN&quot;, 25,
&quot;KRON&quot;, 25,
&quot;SPRT&quot;, 25,
&quot;WBBR&quot;, 25,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Royalty Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rush_Fee__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Rush Fee&quot;), 
50
,0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rush Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Search_Fee__c</fullName>
        <label>Search Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Search_Request_Status__c</fullName>
        <label>Search Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Found</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <formula>TEXT ( Opportunity__r.Shipping_Method__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Cision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cision Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IQ Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - YouTube</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Record_Set_Up__c</fullName>
        <label>Special Record Set Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>